# QSearch

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/index/: index.rs  lda.rs  mod.rs  tfidf.rs
src/lexer/: lexer.rs
src/parser/: html_parser.rs  mod.rs  text_parser.rs  xml_parser.rs
