[package]
name = "qsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
xml-rs = "0.8.5"
tl = { version = "0.7.7", features = ["simd"] }
rust-stemmers = "1.2.0"
